# BaseSearch

./: .gitignore  README.md  adaboost_reg.py  cnn_reg.py  convnet_reg.py  design.py  pyproject.toml  rf_reg.py
conf/design/: anneal.py  baseevolve.py  basesearch.py  beam.py  ga.py  mcts.py  random.py  random_human.py  random_single.py
conf/regression/: ada_config.py  cnn_config.py  convnet_config.py  rf_config.py
data/ckpt/: human_adaboost.pkl  maize_adaboost.pkl  maize_rf.pkl
scripts/: adaboost_reg.py  cnn_reg.py  design.py  rf_reg.py
src/: scorer.py  tool.py
src/designer/: __init__.py  anneal_designer.py  base_designer.py  basesearch_designer.py  beam_designer.py  ga_designer.py  random_single_designer.py
src/regression/dataset/: dataset.py
src/regression/models/: ConvNet.py  __init__.py  cnn.py
src/regression/modules/loss/: mse_loss.py
utils/designer/: __init__.py  base_designer.py  baseevolve_designer.py  mcts_designer.py  random_designer.py
utils/regression/modules/loss/: __init__.py
